--- a/README
+++ b/README
@@ -14,6 +14,7 @@ More background information can be found on Antony Marcano's blog:
 
 HISTORY
 
+	- 0.0.3	-	Made caller() ignore the wrapping sub to test code that use caller() like carp() (thanks to schwern)
 	- 0.0.2	-	Fixed syntax errors in login_recipe.t
 	- 0.0.1 - Renamed the BBC grown code Test::More::LikeXUnit into Test::More::Behaviours
 					- Packaged Test::More::Behaviours as a CPAN module
